[package]
name = "psycho_the_ball"
version = "0.0.1"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15"
glsl-layout = "0.3.2"
lazy_static = "1.4"
failure = "0.1.8"
serde = "1"
derive_more = "0.99.7"
# Needs cmake, reconsider this in the future if it becomes a problem
shaderc = "0.6"
log = "0.4.8"
rayon = "1"
rlua = "0.17"
rlua-builders = "0.1.3"

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
