[package]
name = "psycho_the_ball"
version = "0.0.1"
authors = []
edition = "2018"

[dependencies]
glsl-layout = "0.3.2"
lazy_static = "1"
failure = "0.1.8"
serde = "1"
derive_more = "0.99.7"
# Needs cmake, python, ninja, reconsider this in the future if it becomes a problem
shaderc = "0.6"
log = "0.4.8"
rayon = "1"
rlua = "0.17"
rlua-builders = "0.1.3"
rand = "0.7.3"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies.amethyst]
version = "0.15"
features = ["vulkan"]

[target.'cfg(target_os = "macos")'.dependencies.amethyst]
version = "0.15"
features = ["metal"]